Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6(EOL)
Description
The fix of MDEV-23328 introduced a background thread for killing conflicting transactions. In 10.6, thanks to the refactoring that was conducted in MDEV-24671, the high-priority ("brute-force") applier thread can kill the conflicting transactions itself, before waiting for the locks to be finally released (after the conflicting transactions have been rolled back), in the lock_wait() function.
This will also allow us to remove the Galera hack LockGGuard that had to be added in MDEV-20612, and remove Galera-related function parameters from lock creation.
Attachments
Issue Links
- is caused by
-
MDEV-23328 Server hang due to Galera lock conflict resolution
-
- Closed
-
- relates to
-
MDEV-18534 galera_sr.GCF-1018B: Test failure: mysqltest: mysqltest: Can't connect to local MySQL server; signal 6
-
- Closed
-
-
MDEV-20612 Improve InnoDB lock_sys scalability
-
- Closed
-
-
MDEV-24671 Assertion failure in lock_wait_table_reserve_slot()
-
- Closed
-
-
MDEV-24967 Signal 11 on ha_innodb.cc::bg_wsrep_kill_trx line 18611
-
- Closed
-
-
MDEV-24966 Galera multi-master regression
-
- Closed
-
-
MDEV-25114 Crash: WSREP: invalid state ROLLED_BACK (FATAL)
-
- Closed
-